--- a/MiXi/Main.storyboard
+++ b/MiXi/Main.storyboard
@@ -602,6 +602,114 @@
             </objects>
             <point key="canvasLocation" x="352" y="657"/>
         </scene>
+        <!--Slide Bar View Controller-->
+        <scene sceneID="WYA-vY-2h5">
+            <objects>
+                <viewController storyboardIdentifier="SlideBar" id="gaa-6d-vR1" customClass="SlideBarViewController" customModule="mixi" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pKH-1i-kDI"/>
+                        <viewControllerLayoutGuide type="bottom" id="rvN-I3-LgQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="j6Y-iH-nRY">
+                        <rect key="frame" x="0.0" y="0.0" width="191" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="爱吃鱼的喵" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0Y-PR-rMs">
+                                <rect key="frame" x="104" y="105" width="86" height="14"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <color key="textColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wrh-PY-lcs">
+                                <rect key="frame" x="104" y="126" width="43" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                <state key="normal" title="个人中心" backgroundImage="蜜喜蜜喜－侧滑栏切片_08">
+                                    <color key="titleColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="allBtnClicked:" destination="gaa-6d-vR1" eventType="touchUpInside" id="4OL-FW-qjx"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="U2g-6Z-ThW">
+                                <rect key="frame" x="0.0" y="234" width="191" height="2"/>
+                                <color key="backgroundColor" red="0.1764705882" green="0.1764705882" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZmA-H9-yAZ">
+                                <rect key="frame" x="0.0" y="234" width="191" height="51"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <inset key="contentEdgeInsets" minX="21" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="titleEdgeInsets" minX="12" minY="4" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="发现" image="蜜喜蜜喜－侧滑栏切片_04">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected" image="蜜喜蜜喜－侧滑栏切片_05">
+                                    <color key="titleColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="allBtnClicked:" destination="gaa-6d-vR1" eventType="touchUpInside" id="c4S-GA-Nuv"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7cP-H1-BC3">
+                                <rect key="frame" x="0.0" y="183" width="191" height="2"/>
+                                <color key="backgroundColor" red="0.1764705882" green="0.1764705882" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x8s-2Q-Yrh">
+                                <rect key="frame" x="0.0" y="183" width="191" height="51"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <inset key="contentEdgeInsets" minX="21" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="titleEdgeInsets" minX="12" minY="4" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="首页" image="蜜喜蜜喜－侧滑栏切片_03">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected" image="蜜喜蜜喜－侧滑栏切片_02">
+                                    <color key="titleColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="allBtnClicked:" destination="gaa-6d-vR1" eventType="touchUpInside" id="fKA-vF-BUG"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="蜜喜蜜喜－切片iphone5_107" translatesAutoresizingMaskIntoConstraints="NO" id="IGs-6F-FCf">
+                                <rect key="frame" x="21" y="77" width="75" height="75"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DMM-fh-JHd">
+                                <rect key="frame" x="0.0" y="285" width="191" height="2"/>
+                                <color key="backgroundColor" red="0.1764705882" green="0.1764705882" blue="0.1764705882" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6bN-Qp-8jP">
+                                <rect key="frame" x="0.0" y="285" width="191" height="51"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <inset key="contentEdgeInsets" minX="21" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <inset key="titleEdgeInsets" minX="10" minY="4" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="客服中心" image="蜜喜蜜喜－侧滑栏切片_06">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="selected" image="蜜喜蜜喜－侧滑栏切片_07">
+                                    <color key="titleColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="allBtnClicked:" destination="gaa-6d-vR1" eventType="touchUpInside" id="DMu-x4-VBu"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.14117647059999999" green="0.14117647059999999" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="191" height="568"/>
+                    <connections>
+                        <outlet property="btnCustomerCenter" destination="6bN-Qp-8jP" id="r8w-3I-YeV"/>
+                        <outlet property="btnDiscover" destination="ZmA-H9-yAZ" id="G9w-v8-Vhk"/>
+                        <outlet property="btnMainPage" destination="x8s-2Q-Yrh" id="cEQ-ag-Tye"/>
+                        <outlet property="btnUserCenter" destination="wrh-PY-lcs" id="azi-AO-5gm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y92-9L-Q38" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1112.5" y="1352"/>
+        </scene>
         <!--User Center Table View Controller-->
         <scene sceneID="l1y-Y2-9Nb">
             <objects>
@@ -686,13 +794,13 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="收藏" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKf-bv-ICE">
-                                                                    <rect key="frame" x="270" y="39" width="30" height="15"/>
+                                                                    <rect key="frame" x="269" y="36" width="30" height="15"/>
                                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="收藏白色iphone5_15" translatesAutoresizingMaskIntoConstraints="NO" id="Gz2-qa-5nM">
-                                                                    <rect key="frame" x="269" y="12" width="25" height="25"/>
+                                                                    <rect key="frame" x="269" y="12" width="22" height="22"/>
                                                                 </imageView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Blue Sea" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HbE-le-uFb">
                                                                     <rect key="frame" x="100" y="26" width="65" height="16"/>
@@ -1404,7 +1512,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nwV-FG-FMz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1186" y="752"/>
+            <point key="canvasLocation" x="1174" y="657"/>
         </scene>
     </scenes>
     <resources>
@@ -1416,6 +1524,13 @@
         <image name="对号－白色" width="17" height="12"/>
         <image name="收藏白色iphone5_15" width="16" height="16"/>
         <image name="更多" width="18" height="12"/>
+        <image name="蜜喜蜜喜－侧滑栏切片_02" width="22" height="22"/>
+        <image name="蜜喜蜜喜－侧滑栏切片_03" width="22" height="22"/>
+        <image name="蜜喜蜜喜－侧滑栏切片_04" width="22" height="22"/>
+        <image name="蜜喜蜜喜－侧滑栏切片_05" width="21" height="22"/>
+        <image name="蜜喜蜜喜－侧滑栏切片_06" width="25" height="22"/>
+        <image name="蜜喜蜜喜－侧滑栏切片_07" width="25" height="22"/>
+        <image name="蜜喜蜜喜－侧滑栏切片_08" width="26" height="16"/>
         <image name="蜜喜蜜喜－切片iphone5_104" width="233" height="26"/>
         <image name="蜜喜蜜喜－切片iphone5_107" width="93" height="93"/>
         <image name="蜜喜蜜喜－切片iphone5_33" width="12" height="14"/>
