--- a/MiXi/Main.storyboard
+++ b/MiXi/Main.storyboard
@@ -54,10 +54,10 @@
                                 </state>
                                 <connections>
                                     <action selector="buttonSendPushed" destination="HIK-Ux-wgG" eventType="touchUpInside" id="DoO-1B-dqW"/>
-                                    <segue destination="CKT-yC-lxP" kind="modal" id="uId-19-EHZ"/>
+                                    <action selector="logOnBtnClicked" destination="vXZ-lx-hvc" eventType="touchUpInside" id="NWd-O2-t8T"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入用户名：" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ga9-Bn-jK5">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="用户名：（默认为昵称）" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ga9-Bn-jK5">
                                 <rect key="frame" x="48" y="111" width="224" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="NnC-hI-3kQ"/>
@@ -65,7 +65,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入登陆密码：" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P6c-Pl-aX5">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="密码：（默认为手机号）" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P6c-Pl-aX5">
                                 <rect key="frame" x="48" y="155" width="224" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="Xx3-K6-HPu"/>
@@ -110,6 +110,8 @@
                     <connections>
                         <outlet property="btnLogin" destination="NDS-63-5oX" id="CqG-rw-oym"/>
                         <outlet property="btnRegist" destination="Qdb-qa-XWQ" id="Mup-gq-TGu"/>
+                        <outlet property="passwordTextField" destination="P6c-Pl-aX5" id="eQ5-AB-GN6"/>
+                        <segue destination="CKT-yC-lxP" kind="modal" identifier="logon" id="6aj-gf-kfL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -723,6 +725,7 @@
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="191" height="568"/>
                     <connections>
+                        <outlet property="avatorImageView" destination="IGs-6F-FCf" id="2lw-p0-ooM"/>
                         <outlet property="btnMainPage" destination="x8s-2Q-Yrh" id="cEQ-ag-Tye"/>
                         <outlet property="shadow" destination="V62-lt-m4L" id="wkn-4y-EQB"/>
                     </connections>
@@ -1999,7 +2002,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="bPZ-Nx-5nh" kind="push" id="LCK-CB-hFt"/>
+                                    <action selector="nextBtnPushed" destination="HIK-Ux-wgG" eventType="touchUpInside" id="rIt-7H-X9G"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入手机号" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Aag-2g-GQj">
@@ -2056,7 +2059,9 @@
                     <connections>
                         <outlet property="ButtonNext" destination="PmK-Xo-kng" id="Es2-jM-GIh"/>
                         <outlet property="buttonSend" destination="Nuv-dW-Mn5" id="Ujl-cg-M9k"/>
+                        <outlet property="checkTextField" destination="Lye-cl-Kn0" id="bkd-qY-XfT"/>
                         <outlet property="textFiedlPhone" destination="Aag-2g-GQj" id="i0C-O3-bX1"/>
+                        <segue destination="bPZ-Nx-5nh" kind="push" identifier="register" id="kZ1-zk-3Vl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m0q-Am-IoR" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -2086,7 +2091,6 @@
                                 </state>
                                 <connections>
                                     <action selector="buttonCompeleteTaped" destination="bPZ-Nx-5nh" eventType="touchUpInside" id="3rd-FT-1Rg"/>
-                                    <segue destination="CKT-yC-lxP" kind="modal" id="ADx-VC-VhL"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G09-vo-He9">
@@ -2154,6 +2158,9 @@
                                 <state key="normal" backgroundImage="蜜喜蜜喜－切片iphone5_107">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="avatorClicked" destination="bPZ-Nx-5nh" eventType="touchUpInside" id="vaS-zs-xgZ"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="您的昵称" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="sZI-Nu-hO6">
                                 <rect key="frame" x="110" y="206" width="200" height="30"/>
@@ -2187,6 +2194,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="填写资料" id="jdr-Ls-pNZ"/>
                     <connections>
+                        <outlet property="avator" destination="mYB-0l-zks" id="Mg9-ke-BaY"/>
                         <outlet property="buttonComplete" destination="DhP-Cx-9d4" id="rS2-18-Ujb"/>
                         <outlet property="buttonFemail" destination="ahA-vu-9Po" id="Aoh-nF-mlf"/>
                         <outlet property="buttonMale" destination="q7J-kL-IuB" id="r76-bd-IYW"/>
@@ -2194,6 +2202,7 @@
                         <outlet property="lableStyle" destination="3jI-a4-xQr" id="TBv-jG-kHf"/>
                         <outlet property="textBudget" destination="APg-Qf-7LR" id="2A3-Li-0OJ"/>
                         <outlet property="textNikname" destination="sZI-Nu-hO6" id="IgF-vi-a8C"/>
+                        <segue destination="CKT-yC-lxP" kind="modal" identifier="main" id="57I-jw-Dld"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bXM-Kw-wkf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3766,11 +3775,11 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="Dpr-x8-YGQ"/>
-        <segue reference="uId-19-EHZ"/>
-        <segue reference="wpb-Hm-7cv"/>
-        <segue reference="piM-g4-efd"/>
-        <segue reference="wvy-su-I8f"/>
         <segue reference="ftU-7a-bEC"/>
+        <segue reference="57I-jw-Dld"/>
+        <segue reference="piM-g4-efd"/>
+        <segue reference="wpb-Hm-7cv"/>
+        <segue reference="wvy-su-I8f"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.5568627451" green="0.47450980390000003" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
 </document>
